--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,10 @@
     ".md"
   ],
   "dependencies": {
-    "angular": "^1.5.8"
+    "angular": "latest",
+    "angular-ui-router": "latest",
+    "bootstrap": "latest",
+    "angular-resource": "latest",
+    "font-awesome": "latest"
   }
 }
