--- a/package.json
+++ b/package.json
@@ -10,7 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "passport": "~0.1.17",
+    "passport-facebook": "~1.0.2",
+    "passport-facebook-token": "latest",
+    "mongoose": "^4.4.12",
+    "express-session": "latest",
+    "bcrypt-nodejs": "latest",
+    "body-parser": "^1.4.3",
+    "require-dir": "latest",
+    "connect-redis": "latest"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
