--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "latest",
+    "body-parser": "^1.4.3",
+    "connect-redis": "latest",
     "express": "^4.14.0",
+    "express-session": "latest",
+    "mongoose": "^4.4.12",
+    "morgan": "^1.7.0",
     "passport": "~0.1.17",
     "passport-facebook": "~1.0.2",
     "passport-facebook-token": "latest",
-    "mongoose": "^4.4.12",
-    "express-session": "latest",
-    "bcrypt-nodejs": "latest",
-    "body-parser": "^1.4.3",
-    "require-dir": "latest",
-    "connect-redis": "latest"
+    "require-dir": "latest"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
