--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt-nodejs": "latest",
     "body-parser": "^1.4.3",
+    "compression": "^1.6.2",
     "connect-redis": "latest",
     "express": "^4.14.0",
     "express-session": "latest",
