--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "test",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "/server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "prodStart": "export NODE_ENV=production && node server/server.js"
   },
   "author": "",
   "license": "ISC",
